--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
     "/js/enso.js": "/js/enso.js",
-    "/js/tableExample.js": "/js/tableExample.js",
-    "/css/enso.css": "/css/enso.css",
-    "/js/selectExample.js": "/js/selectExample.js"
+    "/css/enso.css": "/css/enso.css"
 }
