--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/framework": "5.6.*",
         "laravel/horizon": "^1.2",
         "laravel/tinker": "~1.0",
+        "quickbooks/v3-php-sdk": "^5.0",
         "scottlaurent/accounting": "^0.2.0",
         "sentry/sentry-laravel": "^0.8.0"
     },
