--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "laravel/horizon": "^1.2",
         "laravel/tinker": "~1.0",
         "quickbooks/v3-php-sdk": "^5.0",
-        "scottlaurent/accounting": "^0.2.0",
+        "scottlaurent/accounting": "dev-master",
         "sentry/sentry-laravel": "^0.8.0"
     },
     "require-dev": {
