--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "laravel/framework": "5.6.*",
         "laravel/horizon": "^1.2",
         "laravel/tinker": "~1.0",
-        "sentry/sentry-laravel": "^0.8.0"
+        "sentry/sentry-laravel": "^0.8.0",
+        "quickbooks/v3-php-sdk": "^5.0",
+        "scottlaurent/accounting": "dev-master"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
