--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "video.js": "^7.0.3",
         "vue": "^2.5.16",
         "vue-router": "^3.0.1",
+        "vue-simple-calendar": "^3.0.2",
         "vue-video-player": "^5.0.2",
         "vuex": "^3.0.0",
         "zxcvbn": "^4.4.2"
