--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "modularsoftware/maintenance",
-    "description": "Modular Maintenance can be a solid start for any SPA based on Laravel 5.6, Vue and Bulma",
+    "description": "Modular Maintenance is a work in progress for property services. SPA based on Enso SPA (Laravel 5.6, Vue and Bulma)",
     "license": "MIT",
     "type": "project",
     "require": {
