--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ services:
   - docker
   - neo4j
 
+language: php
+
+php:
+  - 7.2
+
 ## Cache composer and vendor libraries
 cache:
   directories:
