--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     },
     "false": {},
     "dependencies": {
-        "@fortawesome/fontawesome": "1.1.8",
-        "@fortawesome/fontawesome-free-brands": "5.0.13",
-        "@fortawesome/fontawesome-free-regular": "5.0.13",
-        "@fortawesome/fontawesome-free-solid": "5.0.13",
-        "@fortawesome/vue-fontawesome": "0.1.0",
+        "@fortawesome/fontawesome": "^1.1.8",
+        "@fortawesome/fontawesome-free-brands": "^5.0.13",
+        "@fortawesome/fontawesome-free-regular": "^5.0.13",
+        "@fortawesome/fontawesome-free-solid": "^5.0.13",
+        "@fortawesome/vue-fontawesome": "0.0.22",
         "accounting-js": "1.1.1",
         "animate.css": "3.6.1",
         "axios": "0.17.1",
