--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ matrix:
         #
         # Define versions of MySQL and MariaDB to test against.
         # mysql 5.6
-        - php: 7.2
-          env: DB=mysql:5.6
+        #- php: 7.2
+        #  env: DB=mysql:5.6
         #
         # Define versions of MySQL and MariaDB to test against.
         # mysql 5.6
